# fish_identification

./: .gitignore  CLAUDE.md  README.MD  README.md  analyze_dataset.py  dataset.py  detector_data.yaml  main.py  pyproject.toml  train_detector.py  yolo.yaml
src/: AModel.py  dataset.py  pipeline.py
src/analysis/: stats.py  visualize.py
src/classifier/: classifier.py
src/data/: dataset.py  transforms.py
src/detector/: detector.py
tests/: conftest.py  test_classifier.py  test_dataset.py  test_detector.py  test_pipeline.py  test_stats.py  test_visualize.py  test_yaml.py
